[gd_scene load_steps=4 format=3 uid="uid://d0dyytb7nri5t"]

[ext_resource type="Texture2D" uid="uid://3c8ox0meld3q" path="res://images/screens/sidebar_arrow.png" id="1_2qvg7"]
[ext_resource type="Script" path="res://scripts/scenes/SoundControlSidebar.gd" id="1_uugk5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w3yj"]
bg_color = Color(0.385493, 0.385492, 0.385492, 0.705882)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="SoundControlSidebar" type="AspectRatioContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -72.0
offset_bottom = 72.0
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0
script = ExtResource("1_uugk5")

[node name="SidebarRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_2qvg7")

[node name="SoundControlPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 144)
layout_direction = 3
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_5w3yj")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/SoundControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SoundControlPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BGMPanel" type="Panel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/BGMPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGMLabel" type="RichTextLabel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/BGMPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center][b]BGM"
fit_content = true

[node name="BGMStatusLabel" type="RichTextLabel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/BGMPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]ON"
fit_content = true

[node name="BGMButton" type="Button" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/BGMPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="FXPanel" type="Panel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/FXPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="FXLabel" type="RichTextLabel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/FXPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center][b]FX"
fit_content = true

[node name="FXStatusLabel" type="RichTextLabel" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/FXPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]ON"
fit_content = true

[node name="FXButton" type="Button" parent="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/FXPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[connection signal="mouse_entered" from="HBoxContainer" to="HBoxContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer" to="HBoxContainer" method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/BGMPanel/BGMButton" to="HBoxContainer" method="_on_bgm_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SoundControlPanel/MarginContainer/VBoxContainer/FXPanel/FXButton" to="HBoxContainer" method="_on_fx_button_pressed"]
